Add Term Of Service and Privacy Policy

--- a/Terms_Of_Service.html
+++ b/Terms_Of_Service.html
@@ -20,7 +20,7 @@
     </style>
 </head>
 <body>
-    tiktok-developers-site-verification=JaE5RmmYZNXdb0vMU8n0v0RJHcJ4bBwR
+    <h1>tiktok-developers-site-verification=JaE5RmmYZNXdb0vMU8n0v0RJHcJ4bBwR</h1>
     <h1>Terms of Service / Điều khoản dịch vụ</h1>
     
     <h2>1. Introduction / Giới thiệu</h2>
