Add Term Of Service and Privacy Policy

--- a/Terms_Of_Service.html
+++ b/Terms_Of_Service.html
@@ -20,7 +20,8 @@
     </style>
 </head>
 <body>
-    <p>tiktok-developers-site-verification=JaE5RmmYZNXdb0vMU8n0v0RJHcJ4bBwR</p>
+    <div id="tiktok-verification">tiktok0K6e6N4JenLN77vxaieqwRMB8Qcf4INV</div>
+
     <h1>Terms of Service / Điều khoản dịch vụ</h1>
     
     <h2>1. Introduction / Giới thiệu</h2>
