Add Term Of Service and Privacy Policy

--- a/Privacy_Policy.html
+++ b/Privacy_Policy.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My TikTok API App</title>
+    <title>My Pinterest API App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -24,37 +24,37 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My TikTok API App</h1>
-    <p>This app is designed to work with the TikTok API.</p>
+    <h1>Welcome to My Pinterest API App</h1>
+    <p>This app is designed to work with the Pinterest API.</p>
     <p>More features will be added soon!</p>
 
     <div class="section">
         <h2>1. Introduction / Giới thiệu</h2>
-        <p>Welcome to My Tiktok API APP. By using our app, you agree to comply with the terms outlined below.</p>
-        <p>Chào mừng bạn đến với ứng dụng Tiktok API của tôi. Khi sử dụng ứng dụng này, bạn đồng ý tuân thủ các điều khoản dưới đây.</p>
+        <p>Welcome to My Pinterest API APP. By using our app, you agree to comply with the terms outlined below.</p>
+        <p>Chào mừng bạn đến với ứng dụng Pinterest API của tôi. Khi sử dụng ứng dụng này, bạn đồng ý tuân thủ các điều khoản dưới đây.</p>
 
         <h2>2. User Rights and Responsibilities / Quyền và Trách nhiệm của Người Dùng</h2>
         <p>You must use this app legally and ethically.</p>
         <p>You are not allowed to collect, store, or distribute illegal content.</p>
-        <p>You must not use the app to violate TikTok’s policies or terms.</p>
+        <p>You must not use the app to violate Pinterest’s policies or terms.</p>
         <p>Bạn chỉ được sử dụng ứng dụng này hợp pháp và có đạo đức.</p>
         <p>Bạn không được thu thập, lưu trữ hoặc phát tán nội dung bất hợp pháp.</p>
-        <p>Bạn không được sử dụng ứng dụng để vi phạm chính sách hoặc điều khoản của TikTok.</p>
+        <p>Bạn không được sử dụng ứng dụng để vi phạm chính sách hoặc điều khoản của Pinterest.</p>
 
         <h2>3. Our Rights and Responsibilities / Quyền và Trách nhiệm của Chúng Tôi</h2>
         <p>We reserve the right to modify or terminate the service at any time.</p>
-        <p>We are not responsible for any content collected from TikTok or created by users.</p>
+        <p>We are not responsible for any content collected from Pinterest or created by users.</p>
         <p>Chúng tôi có quyền thay đổi hoặc chấm dứt dịch vụ bất cứ lúc nào.</p>
-        <p>Chúng tôi không chịu trách nhiệm với bất kỳ nội dung nào do người dùng tạo ra hoặc thu thập từ TikTok.</p>
+        <p>Chúng tôi không chịu trách nhiệm với bất kỳ nội dung nào do người dùng tạo ra hoặc thu thập từ Pinterest.</p>
 
         <h2>4. Contact / Liên hệ</h2>
         <p>For questions regarding the Terms of Service, please contact us at: nguyenhoangviethung@gmail.com Hung Nguyen.</p>
         <p>Nếu bạn có câu hỏi về Điều khoản Dịch vụ, vui lòng liên hệ qua email: nguyenhoangviethung@gmail.com Hung Nguyen.</p>
 
         <h2>1. Information We Collect / Thông tin Chúng Tôi Thu Thập</h2>
-        <p>We may collect data from TikTok via the API, including videos, comments, and user information.</p>
+        <p>We may collect data from Pinterest via the API, including videos, comments, and user information.</p>
         <p>We do not collect sensitive personal data without user consent.</p>
-        <p>Chúng tôi có thể thu thập dữ liệu từ TikTok thông qua API, bao gồm video, bình luận và thông tin người dùng.</p>
+        <p>Chúng tôi có thể thu thập dữ liệu từ Pinterest thông qua API, bao gồm video, bình luận và thông tin người dùng.</p>
         <p>Chúng tôi không thu thập thông tin cá nhân nhạy cảm của người dùng mà không có sự đồng ý của họ.</p>
 
         <h2>2. How We Use the Data / Cách Chúng Tôi Sử Dụng Dữ Liệu</h2>
