--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My TikTok API App</title>
+    <title>My Pinterest API App</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -19,8 +19,8 @@
     </style>
 </head>
 <body>
-    <h1>Welcome to My TikTok API App</h1>
-    <p>This app is designed to work with the TikTok API.</p>
+    <h1>Welcome to My Pinterest API App</h1>
+    <p>This app is designed to work with the Pinterest API.</p>
     <p>More features will be added soon!</p>
 </body>
 </html>
